Primeira alteração completa

--- a/extra.html
+++ b/extra.html
@@ -5,18 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Conteúdo Extra</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Meu Site</a>
+      <a class="navbar-brand" href="index.html">
+        <img src="network_intelligence_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png" alt="Ícone Circuito Zero" width="30" height="30" class="d-inline-block align-text-top">
+    Circuito Zero
+        </a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
           <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
-          <li class="nav-item"><a class="nav-link" href="extra.html">Extra</a></li>
+          <li class="nav-item"><a class="nav-link" href="extra.html">Serviços</a></li>
         </ul>
       </div>
     </div>
@@ -24,9 +27,34 @@
 
   <!-- Conteúdo Extra -->
   <div class="container mt-5">
-    <h2>Minha Experiência com Desenvolvimento Web</h2>
-    <p>Desde que comecei a programar, me apaixonei pelo desenvolvimento de sites. Bootstrap facilitou muito minha vida, especialmente na criação de layouts responsivos...</p>
-    <p>Confira também meu repositório no <a href="https://github.com/" target="_blank">GitHub</a>.</p>
+    <h2>Nossos Serviços</h2>
+    <div class="servicos">
+    <div class="servico"><strong>Implantação Fluig Plataforma</strong><br>
+	<p>Realizamos a implantação completa da plataforma FLUIG, desde a configuração do ambiente até a publicação do portal. Atuamos com modelagem de estrutura organizacional, permissões, painéis personalizados e integração com sistemas TOTVS e outras soluções corporativas. Nossa abordagem é modular e escalável, respeitando as particularidades e maturidade digital de cada cliente.</p>
+	</div>
+    <div class="servico"><strong>Processos e Workflow</strong><br>
+	<p>Desenhamos e implementamos processos inteligentes e automatizados com base na metodologia BPMN, utilizando o FLUIG Process Management. Criamos formulários, notificações, regras de negócio e integrações com sistemas externos para transformar atividades manuais em fluxos digitais ágeis, auditáveis e escaláveis. Cada processo é pensado para reduzir retrabalho, garantir conformidade e aumentar a produtividade.</p>
+	</div>
+    <div class="servico"><strong>Analytics</strong><br>
+	<p>Utilizamos o FLUIG Analytics para entregar dashboards dinâmicos, relatórios interativos e visualizações personalizadas com foco em tomada de decisão. Nossas soluções permitem consolidar dados de diferentes fontes (TOTVS, Excel, bancos de dados, APIs etc.) e monitorar indicadores de desempenho (KPIs) em tempo real, por área, setor ou projeto.</p>
+	</div>
+    <div class="servico"><strong>Identity</strong><br>
+	<p>Implantamos o FLUIG Identity para unificar e gerenciar os acessos dos usuários à plataforma e aos sistemas integrados, com autenticação segura (SSO), provisionamento automatizado e sincronização com diretórios como AD/LDAP. Reforçamos a segurança da informação, garantimos a rastreabilidade e facilitamos a governança de identidade digital.</p>
+	</div>
+	<div class="servico"><strong>Capacitação</strong><br>
+	<p>Oferecemos capacitação sob medida para usuários finais, administradores e desenvolvedores, com foco em autonomia, produtividade e adoção da ferramenta. Os treinamentos podem ser presenciais ou remotos, em formato teórico-prático, com materiais customizados conforme os processos e projetos da empresa. Também criamos trilhas de aprendizagem no próprio FLUIG, promovendo o uso contínuo da plataforma.</p>
+	</div>
+	<div class="servico"><strong>Gestão Documentos</strong><br>
+	<p>Na ConsultaDos, desenvolvemos soluções completas de Gestão Eletrônica de Documentos (GED) com o FLUIG, promovendo o controle, a segurança e a agilidade no ciclo de vida dos documentos da sua empresa.
+Implantamos estruturas organizadas de pastas, com regras de versionamento, permissões de acesso, notificações inteligentes e fluxos de aprovação. Com o GED FLUIG, seus documentos ficam sempre acessíveis de forma segura e centralizada — seja para auditorias, contratos, certificados, manuais, políticas ou qualquer outro tipo de conteúdo corporativo.
+</p>
+	</div>
+	<div class="servico"><strong>Integração ERP TOTVS</strong><br>
+	<p>A Código Zero é especialista em integrar o FLUIG aos principais sistemas ERP da TOTVS (como Protheus, RM e Datasul), criando um ecossistema digital coeso, seguro e produtivo.
+Nossa equipe domina as melhores práticas de integração utilizando TOTVS SmartClient, Webservices, REST API, MicrosigaWS e camadas personalizadas. Com isso, garantimos que dados e processos fluam perfeitamente entre os sistemas corporativos, evitando retrabalho, aumentando a confiabilidade da informação e acelerando decisões.
+</p>
+	</div>
+  </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
