--- a/contato.html
+++ b/contato.html
@@ -5,44 +5,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contato</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="style.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Meu Site</a>
+      <a class="navbar-brand" href="index.html">
+        <img src="network_intelligence_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png" alt="Ícone Circuito Zero" width="30" height="30" class="d-inline-block align-text-top">
+    Circuito Zero
+        </a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
           <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
-          <li class="nav-item"><a class="nav-link" href="extra.html">Extra</a></li>
+          <li class="nav-item"><a class="nav-link" href="extra.html">Serviços</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Formulário -->
-  <div class="container mt-5">
-    <h2>Entre em Contato</h2>
-    <form id="formContato">
-      <div class="mb-3">
-        <label for="nome" class="form-label">Seu nome</label>
-        <input type="text" class="form-control" id="nome" required>
-      </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Seu e-mail</label>
-        <input type="email" class="form-control" id="email" required>
-      </div>
-      <div class="mb-3">
-        <label for="mensagem" class="form-label">Mensagem</label>
-        <textarea class="form-control" id="mensagem" rows="5" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Enviar</button>
-    </form>
-  </div>
+<div class="container">
+  <div class="row">
+    <!-- Formulário -->
+    <div class="col-md-7">
+      <h2 class="mt-4">Conecte-se com a Circuito Zero</h2>
+      <form id="formContato">
+        <div class="row">
+          <div class="col-md-12">
+            <label for="nome" class="form-label">Seu nome</label>
+            <input type="text" class="form-control" name="nome" id="nome" required>
+          </div>
+          <div class="col-md-12">
+            <label for="email" class="form-label">Seu e-mail</label>
+            <input type="email" class="form-control" name="email" id="email" required>
+            <div id="mensagemErro" class="erro"></div>
+          </div>
+          <div class="col-md-12">
+            <label for="telefone" class="form-label">Seu telefone</label>
+            <input type="text" class="form-control" name="telefone" id="telefone" required>
+          </div>
+          <div class="col-md-12">
+            <label for="mensagem" class="form-label">Mensagem</label>
+            <textarea class="form-control" id="mensagem" rows="5" required></textarea>
+          </div>
+        </div>
+        <br>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
+    </div>
 
-  <script src="js/script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Contato lateral -->
+    <div class="col-md-5">
+      <div class="ps-md-4">
+        <h2 class="mt-4">Outras formas de contato</h2>
+        <p><strong>Telefone:</strong> (35) 3694-5599</p>
+        <p><strong>Email:</strong> circuitozero@circuitozero.com</p>
+        <p><strong>Endereço:</strong> Rua Francisco Sales, 101 - Centro - Lavras MG - Sala 302</p>
+        <ul class="list-unstyled">
+          <li>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" 
+                 style="width:20px; height:20px; vertical-align: middle; margin-right: 8px;">
+            <a href="#" target="_blank">Facebook</a>
+          </li>
+          <li>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" alt="Instagram" 
+                 style="width:20px; height:20px; vertical-align: middle; margin-right: 8px;">
+            <a href="#" target="_blank">Instagram</a>
+          </li>
+          <li>
+            <img src="https://img.freepik.com/vetores-premium/novo-logotipo-do-twitter-x-2023-download-do-vetor-do-logotipo-do-twitter-x_691560-10808.jpg?semt=ais_hybrid&w=740" alt="Twitter" 
+                 style="width:20px; height:20px; vertical-align: middle; margin-right: 8px;">
+            <a href="#" target="_blank">Twitter</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  <script text="text/javascript"  src="script.js"></script>
 </body>
 </html>
