Alterações na página contato e no js

--- a/contato.html
+++ b/contato.html
@@ -68,17 +68,22 @@
           <li>
             <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" 
                  style="width:20px; height:20px; vertical-align: middle; margin-right: 8px;">
-            <a href="#" target="_blank">Facebook</a>
+            <a href="https://www.facebook.com" target="_blank">Facebook</a>
           </li>
           <li>
             <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" alt="Instagram" 
                  style="width:20px; height:20px; vertical-align: middle; margin-right: 8px;">
-            <a href="#" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com" target="_blank">Instagram</a>
           </li>
           <li>
             <img src="https://img.freepik.com/vetores-premium/novo-logotipo-do-twitter-x-2023-download-do-vetor-do-logotipo-do-twitter-x_691560-10808.jpg?semt=ais_hybrid&w=740" alt="Twitter" 
                  style="width:20px; height:20px; vertical-align: middle; margin-right: 8px;">
-            <a href="#" target="_blank">Twitter</a>
+            <a href="https://x.com" target="_blank">X (Twitter)</a>
+          </li>
+          <li>
+            <img src="https://img.freepik.com/vetores-premium/icone-do-aplicativo-linkedin-a-maior-rede-profissional-do-mundo-redes-sociais-empregos-e-carreiras_277909-476.jpg?semt=ais_hybrid&w=740&q=80" alt="Linkedin" 
+                 style="width:20px; height:20px; vertical-align: middle; margin-right: 8px;">
+            <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
           </li>
         </ul>
       </div>
